--- a/package.json
+++ b/package.json
@@ -14,7 +14,16 @@
     "angular-ui-router": "^0.3.2",
     "babel-runtime": "^6.26.0",
     "ionic-scripts": "^1.3.5",
-    "meteor-node-stubs": "^0.3.2",
-    "moment": "^2.22.2"
+    "jquery": "^3.4.1",
+    "moment": "^2.22.2",
+    "npm": "^6.9.0"
+  },
+  "devDependencies": {
+    "@angular/common": "^7.2.9",
+    "@angular/core": "^7.2.9",
+    "@angular/http": "^2.4.10",
+    "@angular/platform-browser": "^7.2.9",
+    "http": "0.0.0",
+    "meteor-node-stubs": "^0.3.3"
   }
 }
