--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@angular/animations": "^8.2.6",
+    "@angular/cdk": "^8.2.0",
+    "@angular/material": "^8.2.0",
     "@babel/runtime": "^7.0.0-beta.42",
     "@ionic/angular": "^4.9.0",
     "angular": "^1.7.2",
@@ -17,7 +20,8 @@
     "ionic-scripts": "^1.3.5",
     "jquery": "^3.4.1",
     "moment": "^2.22.2",
-    "npm": "^6.9.0"
+    "npm": "^6.9.0",
+    "rxjs": "^6.5.3"
   },
   "devDependencies": {
     "@angular/common": "^7.2.9",
